--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - P1CH2a JS</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<!-- partial:index.partial.html -->
+<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+<div class="series-frame">
+      <h2>The Story of Tau</h2>
+      <p id="info"></p>
+</div>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
 </body>
 </html>
