--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <div class="series-frame">
       <h2>The Story of Tau</h2>
       <p id="info"></p>
+
+
+
+      <audio src="zack-hemsey-the-way.mp3" controls></audio>
 </div>
 <!-- partial -->
   <script  src="./script.js"></script>
