music play/pause

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 
 </head>
 <body>
-
-<div class="series-frame">
-      <h2>The Story of Tau</h2>
-      <p id="info"></p>
-
-
-
-      <audio src="zack-hemsey-the-way.mp3" controls></audio>
+<div class="">
+  <audio id="music" src="zack-hemsey-the-way.mp3"  ></audio>
 </div>
+
+
+
+      <button onclick="myFunction()">Click me</button>
+
+
+      <p id="demo"></p>
+
+
 <!-- partial -->
   <script  src="./script.js"></script>
 
